--- a/install-unzip.yml
+++ b/install-unzip.yml
@@ -1,6 +1,8 @@
 ---
 - hosts: all
   become: yes
+  vars :
+  - ansible_python_interpreter: /usr/bin/python
   tasks:
   - name: Install packages
     apt:
