--- a/apache.yml
+++ b/apache.yml
@@ -1,12 +1,7 @@
 ---
-- name: This sets up an httpd webserver
-  hosts: localhost
-  tasks:
-  - name: Install apache packages 
-    yum:
-      name: httpd
-      state: present
-  - name: ensure httpd is running
-    service:
-      name: httpd 
-      state: started
+- name: confirm using the latest Apache server
+  become: yes
+  become_method: sudo
+  yum: 
+    name: httpd 
+    state: latest
