--- a/apache.yml
+++ b/apache.yml
@@ -1,21 +1,14 @@
 ---
-- hosts: all
-  become: true
-  become_method: sudo
-  vars_files:
-    - vars/default.yml
+- name: This sets up an httpd webserver
+  hosts: localhost
   tasks:
-    - name: Install prerequisites
-      apt: name={{ item }} update_cache=yes state=latest force_apt_get=yes
-      loop: [ 'aptitude' ]
-    - name: Install Apache
-      apt: name=apache2 update_cache=yes state=latest
-  handlers:
-    - name: Reload Apache
-      service:
-        name: apache2
-        state: reloaded
-    - name: Restart Apache
-      service:
-        name: apache2
-        state: restarted    
+  - name: Install apache packages 
+    become: yes
+    become_method: sudo
+    yum:
+      name: httpd
+      state: present
+  - name: ensure httpd is running
+    service:
+      name: httpd 
+      state: started
